# nevax

./: FOR_MAC_FRIEND.md  MACOS_BUILD.md  README.md  build-mac.sh  index-backup.html  index.html  package.json  tsconfig.json  vite.config.ts  webrtc.js
.github/workflows/: build.yml
src/: main.ts  style.css
src-tauri/: Cargo.toml  cargo.cmd  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
