[package]
name = "nevax"
version = "0.1.0"
description = "Nevax - minimal 1:1 voice call"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0"
gethostname = "0.4"
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"
parking_lot = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

